# velomate

./: .env.example  .gitignore  .raven-test.md  .woodpecker.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/memory/: MEMORY.md  feedback_dashboard_distributions.md  feedback_delete_branch_after_merge.md  (+6 more)
.github/: FUNDING.yml
ci/: notify.py
docs/: STATUS.md  act-runner.plist  audit-2026-03-14.md  audit-2026-03-15-internal.md  audit-2026-03-15.md  feedback-log.md  findings-metric-accuracy-25mar26.md  fix-act-runner.sh  golden-record-22mar26.md  reddit-launch.md  setup-gitea-actions.md
ingestor/: Dockerfile  db.py  fitness.py  komoot.py  main.py  requirements.txt  strava.py
reports/: veloai-audit-2026-03-16.md
scripts/: debug_chart_dates.sh  debug_power_curve.sh  push-to-github.sh  ride-planner-v0.py  ride-planner.py
tests/: conftest.py  test_audit_fixes.py  test_classify_and_weather.py  test_dashboards.py  test_fitness.py  test_fitness_recalc.py  test_geocode.py  test_ingestor_main.py  test_np_ef.py  test_planner.py  test_route_generator.py  test_route_intelligence.py  test_route_planner.py  test_strava.py  test_strava_flow.py  test_velomate_db.py
veloai/: __main__.py  cli.py  config.py  db.py  geocode.py  keychain.py  komoot.py  map_preview.py  planner.py  route_generator.py  route_intelligence.py  route_planner.py  strava.py  weather.py
velomate/: __main__.py  cli.py  config.py  db.py  geocode.py  map_preview.py  route_generator.py  route_intelligence.py  route_planner.py  weather.py
(+34 files in other folders)
