[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "velomate"
version = "0.1.0"
description = "Self-hosted cycling data platform — Strava ingestion, Grafana dashboards, intelligent route planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary~=2.9",
    "requests~=2.32",
    "pyyaml~=6.0",
    "mapbox-vector-tile~=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
]

[project.scripts]
velomate = "velomate.cli:main"

[tool.setuptools.packages.find]
include = ["velomate*"]
